# pathtool

./: pyproject.toml  setup.py  url.sh
pathtool/: __init__.py  pathtool.py
