[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pathtool"
version = "1!0.0.1761971741"
description = "Common path related functions"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "hashtool @ git+https://git@github.com/jakeogh/hashtool",
    "psutil",
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/pathtool"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
pathtool = [
    "py.typed",
]
dependencies-git = [
    "eprint @ git+https://git@github.com/jakeogh/eprint",
]
