[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "pathtool"
version = "1!0.0.1762577923"
description = "Common path related functions"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/pathtool"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.pep508-url-version-backend]
pathtool = [
    "py.typed",
]

dependencies-indexed = []
dependencies-git = []
index-urls = ["jakeogh.github.io", "pip-index"]
